# RagAgent

./: .gitignore  Requirements.txt  main.py  pyproject.toml
Data/: Recipe.txt  insurance_customer_data.xlsx
notebook/: excel.ipynb  py.ipynb
